Fix page width and footer text on mobile

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -40,7 +40,7 @@ footer#main-footer {
     > ul {
       list-style-type: none;
       display: flex;
-
+      padding-inline-start: 0;
       place-items: center;
 
       li {
