--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -27,10 +27,11 @@ header#main-header {
       place-items: center;
 
       @include media("width<700px") {
-        padding-left: 0.5em;
+        padding-left: 0.2em;
+        padding-right: 0.5em;
       }
 
-      li {
+      li:not(:last-child) {
         margin: 0 calc(0.4em + 1.9vw);
       }
 
